--- a/appinfo.json
+++ b/appinfo.json
@@ -1,17 +1,25 @@
 {
     "appKeys": {
-        "align": 1,
-        "font": 2,
-        "theme": 0
+        "color_bg": 1,
+        "color_date": 2,
+        "color_time": 3,
+        "font": 0
     },
     "capabilities": [
-        ""
+        "configurable"
     ],
     "companyName": "dartcatcher@gmail.com",
     "longName": "Twatch Fonts",
     "projectType": "native",
     "resources": {
         "media": [
+            {
+                "file": "images/icon.png",
+                "menuIcon": true,
+                "name": "ICON",
+                "targetPlatforms": null,
+                "type": "bitmap"
+            },
             {
                 "characterRegex": "[\uf10b]",
                 "file": "fonts/fontawesome.ttf",
@@ -20,12 +28,10 @@
                 "type": "font"
             },
             {
-                "characterRegex": "[0-9:]",
-                "file": "fonts/Ubuntu-Bold.ttf",
-                "name": "FONT_UBUNTU_B_64",
-                "targetPlatforms": [
-                    "chalk"
-                ],
+                "characterRegex": "[0-9A-Za-z\u00e9\u00f4 ]",
+                "file": "fonts/Ubuntu-Regular.ttf",
+                "name": "FONT_UBUNTU_R_28",
+                "targetPlatforms": null,
                 "type": "font"
             },
             {
@@ -39,10 +45,38 @@
                 "type": "font"
             },
             {
+                "characterRegex": "[0-9:]",
+                "file": "fonts/Ubuntu-Bold.ttf",
+                "name": "FONT_UBUNTU_B_64",
+                "targetPlatforms": [
+                    "chalk"
+                ],
+                "type": "font"
+            },
+            {
                 "characterRegex": "[0-9A-Za-z\u00e9\u00f4 ]",
-                "file": "fonts/Ubuntu-Regular.ttf",
-                "name": "FONT_UBUNTU_R_28",
+                "file": "fonts/Helvetica-Regular.ttf",
+                "name": "FONT_HELVETICA_R_28",
                 "targetPlatforms": null,
+                "type": "font"
+            },
+            {
+                "characterRegex": "[0-9:]",
+                "file": "fonts/Helvetica-Bold.ttf",
+                "name": "FONT_HELVETICA_B_48",
+                "targetPlatforms": [
+                    "aplite",
+                    "basalt"
+                ],
+                "type": "font"
+            },
+            {
+                "characterRegex": "[0-9:]",
+                "file": "fonts/Helvetica-Bold.ttf",
+                "name": "FONT_HELVETICA_B_64",
+                "targetPlatforms": [
+                    "chalk"
+                ],
                 "type": "font"
             },
             {
@@ -50,15 +84,6 @@
                 "file": "fonts/AveriaSerif-Regular.ttf",
                 "name": "FONT_AVERIA_R_28",
                 "targetPlatforms": null,
-                "type": "font"
-            },
-            {
-                "characterRegex": "[0-9:]",
-                "file": "fonts/AveriaSerif-Bold.ttf",
-                "name": "FONT_AVERIA_B_64",
-                "targetPlatforms": [
-                    "chalk"
-                ],
                 "type": "font"
             },
             {
@@ -72,35 +97,11 @@
                 "type": "font"
             },
             {
-                "file": "images/icon.png",
-                "menuIcon": true,
-                "name": "ICON",
-                "targetPlatforms": null,
-                "type": "bitmap"
-            },
-            {
-                "characterRegex": "[0-9A-Za-z\u00e9\u00f4 ]",
-                "file": "fonts/Helvetica-Regular.ttf",
-                "name": "FONT_HELVETICA_R_28",
-                "targetPlatforms": null,
-                "type": "font"
-            },
-            {
                 "characterRegex": "[0-9:]",
-                "file": "fonts/Helvetica-Bold.ttf",
-                "name": "FONT_HELVETICA_B_64",
+                "file": "fonts/AveriaSerif-Bold.ttf",
+                "name": "FONT_AVERIA_B_64",
                 "targetPlatforms": [
                     "chalk"
-                ],
-                "type": "font"
-            },
-            {
-                "characterRegex": "[0-9:]",
-                "file": "fonts/Helvetica-Bold.ttf",
-                "name": "FONT_HELVETICA_B_48",
-                "targetPlatforms": [
-                    "aplite",
-                    "basalt"
                 ],
                 "type": "font"
             }
